--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -34,6 +34,7 @@ table {
   min-width: 100%;
   grid-template-columns:
     minmax(150px, 1fr)
+    minmax(150px, 1fr)
 }
 
 thead,
@@ -41,6 +42,7 @@ tbody,
 tr {
   display: contents;
 }
+
 
 th,
 td {
